# airflow_sec_rag

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  logging.py
app/domain/: __init__.py  identifiers.py  models.py
app/edgar/: __init__.py  client.py  discovery.py  ratelimit.py
app/embedding/: __init__.py  base.py  factory.py  fastembed_embedder.py  runpod_embedder.py  sparse.py
app/eval/: __init__.py  confidence.py  gate.py  golden.py  numeric.py  verifier.py
app/generation/: __init__.py  answerer.py  confidence.py  grounding.py  llm.py  models.py  prompt.py
app/index/: __init__.py  db.py  models.py  repository.py
app/narrative/: __init__.py  chunk.py  extract.py
app/retrieval/: __init__.py  decompose.py  filters.py  reranker.py  retriever.py
app/serving/: __init__.py  api.py  deps.py  mcp_server.py  tools.py
app/storage/: __init__.py  base.py  factory.py  keys.py  local.py  s3.py
app/vectorstore/: __init__.py  factory.py  qdrant_index.py
app/xbrl/: __init__.py  parse.py
configs/: __init__.py  golden.yaml  run_config.py  settings.py  universe.dev.yaml
infra/: docker-compose.yml
infra/airflow/: Dockerfile  docker-compose.yml
infra/airflow/dags/: sec_rag_pipeline.py
infra/runpod/: Dockerfile  handler.py  requirements.txt
scripts/: __init__.py  acquire_filings.py  answer.py  discover_filings.py  evaluate.py  index_chunks.py  parse_filings.py  search.py
tests/: conftest.py  fakes.py  test_dag.py  test_discovery.py  test_domain.py  test_edgar_client.py  test_embedding.py  test_eval.py  test_factory_and_config.py  test_fastembed.py  test_generation.py  test_index.py  test_index_chunks_script.py  test_live_edgar.py  test_live_llm.py  test_logging.py  test_narrative.py  test_parse_scripts.py  test_ratelimit.py  test_retrieval.py  test_scripts.py  test_serving.py  test_settings.py  test_storage.py  test_vectorstore.py  test_version.py  test_xbrl.py
